added whole head and midline ERP trace plots

--- a/author_fig1.tex
+++ b/author_fig1.tex
@@ -4,7 +4,7 @@
 \documentclass[border=0in]{standalone}
 \usepackage{graphicx}
 \begin{document}
-\includegraphics[width=.45\textwidth]{p3_plot1.pdf}
-\includegraphics[width=.45\textwidth]{p3_plot2.pdf}
+\includegraphics[width=.45\textwidth]{generated/p3_midline_plot1.pdf}
+\includegraphics[width=.45\textwidth]{generated/p3_midline_plot2.pdf}
 \end{document}
 
