--- a/author_ms.bib
+++ b/author_ms.bib
@@ -1,72 +1,98 @@
 @book{APAStyle6th,
-   author = {{American Psychological Association}},
-   title = {Publication Manual of the American Psychological Association},
-   edition = {6th},
-   publisher = {American Psychological Association},
-   pages ={272},
-   year = {2010},
-   type = {Book}
-}
-
-
-@article{PsychSciSubmissions2020,
-   author = {},
-   title = {Psychological Science 2020 Submission Guidelines},
-   publisher = {Association for Psychological Science},
-   urldate= {2020-08-11},
-   url-modified = {2020-07-13},
-   url = {https://www.psychologicalscience.org/publications/psychological_science/ps-submissions},
-   year = {2020},
-   type = {Web Page}
-}
-
-
-@misc{PsychSciFigs2013,
-   title = {{APS} Figure Format and Style Guidelines},
-   publisher = {Association for Psychological Science},
-   month = {10},
-   url = {https://www.psychologicalscience.org/publications/aps-figure-format-style-guidelines},
-   urldate= {2020-08-11},
-   year = {2013},
-   type = {Web Page}
+  author =	 {{American Psychological Association}},
+  title =	 {Publication Manual of the American Psychological
+                  Association},
+  edition =	 {6th},
+  publisher =	 {American Psychological Association},
+  pages =	 272,
+  year =	 2010,
+  type =	 {Book}
 }
 
 @misc{APSStructStyle,
-   title = {Manuscript Structure, Style, and Content Guidelines},
-   publisher = {Association for Psychological Science},
-   url = {https://www.psychologicalscience.org/publications/ms-structure-guidelines},
-   urldate= {2020-08-11},
-   month = {},
-   year = {},
-   type = {Web Page}
+  title =	 {Manuscript Structure, Style, and Content Guidelines},
+  publisher =	 {Association for Psychological Science},
+  url =
+                  {https://www.psychologicalscience.org/publications/ms-structure-guidelines},
+  urldate =	 {2020-08-11},
+  type =	 {Web Page}
 }
-
-
-Manuscript Structure, Style, and Content Guidelines } (MSSCG)
-
-
 
 @ARTICLE{Lamport1986,
-   author = {L[eslie] A. Lamport},
-   title = {The Gnats and Gnus Document Preparation System},
-   journal = {G-Animal's Journal},
-   year = 1986,
-   volume = 41,
-   number = 7,
-   pages = "73+",
-   month = jul,
+  author =	 {L[eslie] A. Lamport},
+  title =	 {The Gnats and Gnus Document Preparation System},
+  journal =	 {G-Animal's Journal},
+  year =	 1986,
+  volume =	 41,
+  number =	 7,
+  pages =	 "73+",
+  month =	 jul,
 }
 
+@misc{PsychSciFigs2013,
+  title =	 {{APS} Figure Format and Style Guidelines},
+  publisher =	 {Association for Psychological Science},
+  month =	 10,
+  url =
+                  {https://www.psychologicalscience.org/publications/aps-figure-format-style-guidelines},
+  urldate =	 {2020-08-11},
+  year =	 2013,
+  type =	 {Web Page}
+}
+
+@article{PsychSciSubmissions2020,
+  author =	 {},
+  title =	 {Psychological Science 2020 Submission Guidelines},
+  publisher =	 {Association for Psychological Science},
+  urldate =	 {2020-08-11},
+  url-modified = {2020-07-13},
+  url =
+                  {https://www.psychologicalscience.org/publications/psychological_science/ps-submissions},
+  year =	 2020,
+  type =	 {Web Page}
+}
 
 @article{UDCK2020,
-   author = {Urbach, Thomas P and DeLong, Katherine A. and Chan,
-                  Wen-Hsuan and Kutas, Marta},
-   title = {An exploratory data analysis of word form prediction in
-                  word-by-word reading},
-   journal = {Proceedings of the National Academy of Sciences},
-   volume = {XXX},
-   number = {XXX},
-   year = {2020},
-   type = {Journal Article}
+  author =	 {Urbach, T.~P. and DeLong, K. A. and Chan, W.-H. and
+                  Kutas, M.},
+  title =	 {An exploratory data analysis of word form prediction
+                  during word-by-word reading},
+  journal =	 {Proceedings of the National Academy of Sciences},
+  pages =	 201922028,
+  DOI =		 {10.1073/pnas.1922028117},
+  url =
+                  {http://www.pnas.org/content/early/2020/08/10/1922028117.abstract},
+  year =	 2020,
+  type =	 {Journal Article}
 }
 
+@misc{Urbach2020z,
+  author =	 {Urbach, T.~P.},
+  title =	 {eeg-workshops/mkpy\_data\_examples/data [data set]},
+  DOI =		 {10.5281/zenodo.4099632},
+  year =	 2020,
+  month =	 11,
+}
+
+@incollection{kluEtAl2016,
+  title =	 {Jupyter Notebooks-a publishing format for
+                  reproducible computational workflows.},
+  author =	 {Kluyver, T. and Ragan-Kelley, B. and P{\'e}rez,
+                  F. and Granger, B.~E. and Bussonnier, M. and
+                  Frederic, J. and Kelley, K. and Hamrick, J.~B. and
+                  Grout, J. and Corlay, S. and others},
+  booktitle =	 {Positioning and Power in Academic Publishing:
+                  Players, Agents and Agendas},
+  editor =	 {Loizides, F. and Schmidt, B.},
+  volume =	 2016,
+  year =	 2016,
+  doi =
+                  {https://doi.org/10.3233/10.3233/978-1-61499-649-1-87}
+}
+
+@misc{latexproject,
+  title =	 {\LaTeX{} --- A docoument preparation system
+                  [software]},
+  author =	 {{\LaTeX{} community}},
+  url =		 {https://www.latex-project.org/},
+}
