--- a/apa_ms.bib
+++ b/apa_ms.bib
@@ -52,26 +52,19 @@
   type =	 {Web Page}
 }
 
-@article{UDCK2020,
-  author =	 {Urbach, T.~P. and DeLong, K. A. and Chan, W.-H. and
-                  Kutas, M.},
-  title =	 {An exploratory data analysis of word form prediction
-                  during word-by-word reading},
-  journal =	 {Proceedings of the National Academy of Sciences},
-  pages =	 201922028,
-  DOI =		 {10.1073/pnas.1922028117},
-  url =
-                  {http://www.pnas.org/content/early/2020/08/10/1922028117.abstract},
-  year =	 2020,
-  type =	 {Journal Article}
-}
-
 @misc{Urbach2020z,
   author =	 {Urbach, T.~P.},
   title =	 {eeg-workshops/mkpy\_data\_examples/data [data set]},
   DOI =		 {10.5281/zenodo.4099632},
   year =	 2020,
   month =	 11,
+}
+
+@misc{ccby4.0,
+  title =	 {Creative Commons
+                  Attribution-NonCommercial-ShareAlike 4.0
+                  International (CC BY-NC-SA 4.0) [software license]},
+  url =          {https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode},
 }
 
 @incollection{kluEtAl2016,
@@ -93,6 +86,6 @@
 @misc{latexproject,
   title =	 {\LaTeX{} --- A docoument preparation system
                   [software]},
-  author =	 {{\LaTeX{} community}},
+  author =	 {{\LaTeX{} developers}},
   url =		 {https://www.latex-project.org/},
 }
