--- a/apa_si.tex
+++ b/apa_si.tex
@@ -39,9 +39,7 @@
 \usepackage{pdfpages}
 
 
-\title{Supporting Information: APA 6th-style research reports with LaTeX{}: A not-especially
-  tongue-in-cheek reproduced reproducible research report report}\zlabel{si}
-
+\title{Supporting Information: Analyzing open science data in style: A reproducible repoducible research report report}
 \shorttitle{Supporting Information: Reproducible reports with LaTeX{}}
 \author{Thomas P. Urbach}
 \affiliation{Kutas Lab \\ Cognitive Science Department \\ University of California, San Diego}
@@ -59,8 +57,8 @@ document can use the same research\_report.bib file so the references
 match. With {\tt \textbackslash usepackage[xr,user,titleref]\{zref\}},
 you can cross-reference back and forth between documents \ldots the
 main report and this SI. For instance here is a reference to
-Figure~\zref{lp_filt} in the main document. The reference is via the
-label, i.e., {\tt \textbackslash zlabel\{lp\_filt\}} so if the figure
+Figure~\zref{ms:multipanel} in the main document. The reference is via the
+label, i.e., {\tt \textbackslash zlabel\{ms:multipanel\}} so if the figure
 is moved to a different page or its number changes because of
 additions or deletions, this reference by number will update
 automatically. The following sections show the source files that
