cleanup ms, si, bib

--- a/apa_analysis.ipynb
+++ b/apa_analysis.ipynb
@@ -32,13 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "downloading sub000p3.ms1500.epochs.feather from Zenodo ... please wait\n",
+      "ok\n",
       "sub000p3.ms1500.epochs.feather ok\n",
       "numpy 1.21.2\n",
       "pandas 1.3.2\n",
@@ -87,7 +89,7 @@
     "# guard the data file MD5\n",
     "with open(DATA_F, 'rb') as _f:\n",
     "    checksum = hashlib.md5(_f.read()).hexdigest()\n",
-    "    if not checksum == \"9ce6af68c74ab0fca41bd1da3414533d\":\n",
+    "    if not checksum == \"4693603de7588d5b843cf212db846a00\":\n",
     "        raise ValueError(f\"bad md5 checksum {DATA_F}\")\n",
     "\n",
     "print(f\"{DATA_F} ok\")\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +434,7 @@
        "(239, 201, 38, 0.1589958158995816)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,20 +720,19 @@
     "\n",
     "2020-08-11\n",
     "\n",
-    "emphasis added\n",
+    "(emphasis in bold added here)\n",
     "\n",
     "\n",
     "Details:\n",
     "\n",
-    "If you are submitting a figure that will appear in color online but will be printed in gray scale because you do not want to pay the fee for color printing, please ensure that readers will be able to discern the colors when they are converted into gray scale (e.g., use different line or fill patterns on graphs in addition to different colors, which will look very similar in gray scale).\n",
     "\n",
     "Please note that yellow may not show up well, especially in line graphs.\n",
     "\n",
     "In __all labels including the key( the first letter of each important word and of any word of at least 4 letters should be capitalized__.\n",
     "\n",
-    "Exception: Units of measure indicated in parentheses don?t have the first letter capitalized, e.g., ?Response Time (ms).?\n",
+    "Exception: Units of measure indicated in parentheses don't have the first letter capitalized, e.g., \"Response Time (ms).\"\n",
     "\n",
-    "Minus signs?NOT HYPHENS?should be used to indicate negative numbers or subtraction (a minus sign can be inserted by holding down the ?Alt? key on a computer keyboard while pressing 0, 1, 5, 0 on the number pad, in sequence).\n",
+    "Minus signs **NOT HYPHENS** should be used to indicate negative numbers or subtraction (a minus sign can be inserted by holding down the <Alt> key on a computer keyboard while pressing 0, 1, 5, 0 on the number pad, in sequence).\n",
     "\n",
     "__Do not insert a box around a key or a figure.)__\n",
     "\n",
@@ -740,7 +741,7 @@
     "\n",
     "Exception: Do not insert spaces in subscripts or superscripts.\n",
     "\n",
-    "The __ordinate axis must be labeled to indicate the nature of the quantities referred to__. For example, if a graph shows response times (ordinate) in various conditions (abscissa), the ordinate must be labeled ?Response Time,? in addition to showing the numerical values.\n",
+    "The __ordinate axis must be labeled to indicate the nature of the quantities referred to__. For example, if a graph shows response times (ordinate) in various conditions (abscissa), the ordinate must be labeled \"Response Time,\" in addition to showing the numerical values.\n",
     "\n",
     "Numerical values on the ordinate axis should be oriented horizontally.\n",
     "If a figure includes error bars, they must be explained in the caption. In the case of a bar graph, be sure that error bars are easily visible (e.g., a black error bar will be invisible in a data bar with a black or dark-gray fill).\n",
@@ -749,7 +750,7 @@
     "\n",
     "Labels and numbers in figures should be in __Helvetica Neue 57 Condensed roman font__. (If you do not have this font installed on your device, please use regular __Helvetica__ or Arial font.)\n",
     "\n",
-    "Do not use boldface font unless it?s intended to highlight something. In that case, the caption should explain what the boldface indicates.\n",
+    "Do not use boldface font unless it's intended to highlight something. In that case, the caption should explain what the boldface indicates.\n",
     "\n",
     "Symbols referring to variables should be in Helvetica Neue 57 Condensed italic font. (If you do not have this font installed on your device, please use regular Helvetica or Arial font.) Otherwise, do not use italics.\n",
     "\n",
@@ -773,12 +774,13 @@
     "panels__. They should not be followed by periods or surrounded by parentheses.\n",
     "\n",
     "__All other__ text in graphs (e.g., a label for a graphed line or symbol) should be in __9-point__ font.\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -932,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1156,13 +1158,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1171,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1270,7 @@
        "[78 rows x 1 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1456,7 +1451,7 @@
        "[78 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1565,6 +1560,13 @@
     "    )\n",
     "    fig.savefig(\"generated/p3_head_plot3.pdf\", format=\"pdf\", bbox_inches=\"tight\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
