pin zenodo sample EEG to v0.0.4

--- a/apa_analysis.ipynb
+++ b/apa_analysis.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,17 +79,18 @@
     "    warnings.warn(msg)\n",
     "\n",
     "# fetch the EEG recording from Zenodo if it isn't found locally\n",
-    "ARCHIVE = r\"https://zenodo.org/record/3968485/files/\"\n",
+    "ARCHIVE = r\"https://zenodo.org/record/4099632/files/\"\n",
+    "\n",
     "DATA_F = \"sub000p3.ms1500.epochs.feather\"\n",
     "if not Path(DATA_F).exists():\n",
     "    print(f\"downloading {DATA_F} from Zenodo ... please wait\")\n",
     "    pd.read_feather(ARCHIVE + DATA_F).to_feather(DATA_F)\n",
     "    print(\"ok\")\n",
     "\n",
-    "# guard the data file MD5\n",
+    "# guard the data file MD5 ... note the pd.read_feather file md5 is NOT == to zenodo md5.\n",
     "with open(DATA_F, 'rb') as _f:\n",
     "    checksum = hashlib.md5(_f.read()).hexdigest()\n",
-    "    if not checksum == \"4693603de7588d5b843cf212db846a00\":\n",
+    "    if not checksum == \"faedff42de40ff1972baecf61f804aea\":\n",
     "        raise ValueError(f\"bad md5 checksum {DATA_F}\")\n",
     "\n",
     "print(f\"{DATA_F} ok\")\n",
