run analysis, add ms, si, fig, analysis pdfs

--- a/apa_si.tex
+++ b/apa_si.tex
@@ -51,7 +51,7 @@
 
 \section{Summary}
 
-Additional information can go here and be formated to APA 6th
+Additional information can go here and be formatted to APA 6th
 guidelines or something else. The supporting information and main
 document can use the same research\_report.bib file so the references
 match. With {\tt \textbackslash usepackage[xr,user,titleref]\{zref\}},
@@ -62,7 +62,7 @@ label, i.e., {\tt \textbackslash zlabel\{ms:multipanel\}} so if the figure
 is moved to a different page or its number changes because of
 additions or deletions, this reference by number will update
 automatically. The following sections show the source files that
-generated the plots, figures, manuscript and si .pdfs.
+generated the plots, figures, manuscript and supporting information pdfs.
 
 
 APA 7th docs \url{http://ctan.math.washington.edu/tex-archive/macros/latex/contrib/apa7/apa7.pdf}
@@ -183,7 +183,7 @@ See instructions for MacTeX here: \url{https://www.tug.org/mactex/}
 \subsubsection{Windows}
 
 
-See Quick Install insructions 
+See Quick Install instructions 
 \href{https://www.tug.org/texlive/quickinstall.html}{here}
 
 and Windows installer instructions
