update title, refresh pdfs

--- a/apa_ms.tex
+++ b/apa_ms.tex
@@ -66,9 +66,9 @@
 % use this to prevent LaTeX errors when urls break across pages
 %% \hypersetup{draft}
 
-\title{Analyzing open science data in style: A reproducible repoducible research report report}
+\title{Open science data analysis with style: A reproducible repoducible research report}
   
-\shorttitle{Reproducible reproducible research report}
+\shorttitle{Analyzing data in style}
 
 \author{Thomas P. Urbach}
 \leftheader{Urbach}
