--- a/apa_si.tex
+++ b/apa_si.tex
@@ -39,7 +39,7 @@
 \usepackage{pdfpages}
 
 
-\title{Supporting Information: Analyzing open science data in style: A reproducible repoducible research report report}
+\title{Supporting Information: Open science data analysis with style: A reproducible repoducible research report}
 \shorttitle{Supporting Information: Reproducible reports with LaTeX{}}
 \author{Thomas P. Urbach}
 \affiliation{Kutas Lab \\ Cognitive Science Department \\ University of California, San Diego}
