--- a/apa_ms.tex
+++ b/apa_ms.tex
@@ -66,9 +66,9 @@
 % use this to prevent LaTeX errors when urls break across pages
 %% \hypersetup{draft}
 
-\title{Open science data analysis with style: A reproducible repoducible research report}
+\title{Open science with style: A reproducible repoducible research report}
   
-\shorttitle{Analyzing data in style}
+\shorttitle{Open science with style}
 
 \author{Thomas P. Urbach}
 \leftheader{Urbach}
