--- a/apa_si.tex
+++ b/apa_si.tex
@@ -1,7 +1,9 @@
-\documentclass[letter,doc,natbib,11pt]{apa7}  %% man <-> jou <-> doc
-
+\documentclass[helv,letter,doc,natbib,11pt]{apa6}  %% man <-> jou <-> doc
 \usepackage[american]{babel}
 \usepackage[utf8x]{inputenc}
+
+\renewcommand{\familydefault}{\sfdefault}
+
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
@@ -39,7 +41,7 @@
 \usepackage{pdfpages}
 
 
-\title{Supporting Information: Open science data analysis with style: A reproducible repoducible research report}
+\title{Supporting Information: Open science with style: A reproducible repoducible research report}
 \shorttitle{Supporting Information: Reproducible reports with LaTeX{}}
 \author{Thomas P. Urbach}
 \affiliation{Kutas Lab \\ Cognitive Science Department \\ University of California, San Diego}
