cleanup SI url \hrefs

--- a/apa_si.tex
+++ b/apa_si.tex
@@ -19,6 +19,7 @@
     filecolor=blue,      
     urlcolor=blue,
 }
+\urlstyle{same}
 
 % for cross references back to the main doc
 % use \zref{} and \zlabel{} instead of latex native \ref{} and \label{}
@@ -65,13 +66,9 @@ is moved to a different page or its number changes because of
 additions or deletions, this reference by number will update
 automatically. The following sections show the source files that
 generated the plots, figures, manuscript and supporting information pdfs.
-
-
-APA 7th docs \url{http://ctan.math.washington.edu/tex-archive/macros/latex/contrib/apa7/apa7.pdf}
-APA 6th docs \url{http://ctan.math.utah.edu/ctan/tex-archive/macros/latex/contrib/biblatex-contrib/biblatex-apa6/biblatex-apa6.pdf}
-
-
-
+For APA \LaTeX \ style variations on CTAN, see
+\href{http://ctan.math.utah.edu/ctan/tex-archive/macros/latex/contrib/biblatex-contrib/biblatex-apa6/biblatex-apa6.pdf}{APA 6th docs} and
+\href{http://ctan.math.washington.edu/tex-archive/macros/latex/contrib/apa7/apa7.pdf}{APA 7th docs}.
 
 % For APA 7th TeXLive 2020 use change the figure captions from
 % 
@@ -180,7 +177,7 @@ compatible conda env.
 
 \subsubsection{OSX Installation}
 
-See instructions for MacTeX here: \url{https://www.tug.org/mactex/}
+See instructions for MacTeX \href{https://www.tug.org/mactex/}{here}.
 
 \subsubsection{Windows}
 
