add github and OSF urls, make pdfs

--- a/apa_ms.tex
+++ b/apa_ms.tex
@@ -101,12 +101,14 @@
   generated as required for the online submission and production
   platforms used by {\it Proceedings of the National Academy of
     Sciences}. The source code is publicly available and may be cloned
-  from the GitHub repository or downloaded from the Open Science
-  Foundation archive and freely modified or adapted for non-commercial
-  purposes under the Creative Commons
-  Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA
-  4.0) license. This reproducible report, together with the source
-  code that reproduced it, comprise a complete self-contained
+  from the GitHub repository
+  \href{https://github.com/kutaslab/apa67_report}{github.com/kutaslab/apa67\_report}
+  or downloaded from the Open Science Foundation archive
+  \href{https://osf.io/3ejk2/}{Open science with style} and freely
+  modified or adapted for non-commercial purposes under the Creative
+  Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC
+  BY-NC-SA 4.0) license. This reproducible report, together with the
+  source code that reproduced it, comprise a complete self-contained
   tutorial, demonstration, and template for general use.  }
 
 \begin{document}
